Fix list scrollbar styling

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -80,6 +80,16 @@ span.Resizer.horizontal::before {
     width: 100%;
     overflow-y: auto;
 }
+.list-pane::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+.list-pane::-webkit-scrollbar-thumb {
+    background-color: rgb(100, 100, 100);
+}
+.list-pane::-webkit-scrollbar-track {
+    background-color: rgb(63, 63, 63);
+}
 
 .terminal-pane {
     background: #242424;
